# U2U

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.rst  REUSE.md  pyproject.toml
.reuse/: dep5
assets/urdf/orca_hand/: orcahand_left.urdf  orcahand_left_extended.urdf  orcahand_right.urdf  orcahand_right_extended.urdf
assets/urdf/xarm/: xarm6_with_gripper.srdf  xarm6_with_gripper.urdf  xarm6_with_gripper_mplib.urdf  xarm7_with_gripper.usd
assets/usd/: AnalyticCone.usda  HelloCloth.usda  HelloDeformable.usda  HelloWorld.usda  HelloWorldSim.usda  ant.usda  box_jy_phy.usd  card_scene.usda  card_world_.usda  cartpole.usda  cartpole_128.usda  joint_state_read_demo.usda  motion_gen_demo.usd  my_world3.usda  orca_hand_left.usda  orca_hand_right.usda  prismatic_joint.usda  rubber_band_world.usda  rubber_band_world_.usda  rubber_band_world_50.usda  xarm7_leap_right_0119_v19.usd
configs/: scene_config.proto.txt
examples/: articulation_demo.py  cartpole.py  cartpole_analysis.py  cloth_demo.py  deformable_body_demo.py  floating_root_control.py  hello_world.py  mesh_approximation_vis.py  multi_instances.py  pick_and_place_with_mplib.py  reset_abd_state_demo.py  reset_joint_position_demo.py  rigid_body_demo.py  tasks_for_xarm.py  test_multi_env_headless.py
tests/: README.md  test_joint_anim_callbacks.py  test_scene_world_reference.py  test_usd_parser.py  usd_parser_helpers.py  usd_test_cases.yaml
u2u/: __init__.py  controllers.py  env.py  env_manager.py  mesh_factory.py  pipeline.py  pose.py  scene.py  task_queue.py  urdf2usd.py  urdf_loader.py  usd_parser.py  usd_utils.py  utils.py  world.py
u2u/grpc_server/: README.md  physx_sim_client.py  physx_sim_service.py
u2u/proto/api/math/: pose.proto  (+2 more)
u2u/scene_builder/: __init__.py  articulation.py  articulation_builder.py  base.py  cloth.py  deformable_body.py  joint_types.py  rigid_body.py
(+147 files in other folders)
